On Linux, link against most deps statically, bundle remaining with product

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ addons:
     target_paths: client/${TRAVIS_COMMIT:0:8}/${TRAVIS_OS_NAME}
     permissions: public-read
     paths:
-    - mailsync
-    - mailsync.dSYM.zip
+    - mailsync.tar
     - Mailspring.dmg
     - Mailspring.zip
     - $(find . -type f -name *.deb | tr "\n" ":")
