Decode UTF7 special characters in folder / label names #9

--- a/app/package.json
+++ b/app/package.json
@@ -74,6 +74,7 @@
     "tld": "^0.0.2",
     "underscore": "1.8.x",
     "underscore.string": "^3.0",
+    "utf7": "^1.0.2",
     "windows-shortcuts": "emorikawa/windows-shortcuts#b0a0fc7"
   },
   "optionalDependencies": {
