--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
     "color": "^0.7.3",
     "debug": "github:emorikawa/debug#nylas",
     "electron-lets-move": "0.0.5",
-    "electron-spellchecker": "1.0.1",
+    "electron-spellchecker": "tommoor/electron-spellchecker#ba984b5ae1abf78bf11c5de9363a60e1f261712f",
     "emissary": "^1.3.1",
     "emoji-data": "^0.2.0",
     "encoding": "0.1.12",
