On Linux, build curl with c-ares to fix LONGJMP crash

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ addons:
     - autoconf
     - automake
     - libtool
+    - libc-ares-dev
     - libctemplate-dev
     - libcurl4-openssl-dev
     - libicu-dev
