Adding Linux Snapcraft configuration, integration with Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,3 +91,17 @@ cache:
   - node_modules
   - app/node_modules
   - /tmp/mailsync-build-deps
+
+after_success:
+- openssl aes-256-cbc -K $encrypted_f8421d18d2b7_key -iv $encrypted_f8421d18d2b7_iv
+  -in .snapcraft/travis_snapcraft.cfg -out .snapcraft/snapcraft.cfg -d
+
+services:
+- docker
+
+deploy:
+  'on':
+    branch: master
+  provider: script
+  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
+  skip_cleanup: true
