--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ addons:
     - mailsync.tar.gz
     - Mailspring.dmg
     - Mailspring.zip
-    - $(find . -type f -name *.deb | tr "\n" ":")
-    - $(find . -type f -name *.rpm | tr "\n" ":")
+    - $(find . -type f -name mailspring-*.deb | tr "\n" ":")
+    - $(find . -type f -name mailspring-*.rpm | tr "\n" ":")
   apt:
     sources:
     - ubuntu-toolchain-r-test
@@ -103,5 +103,5 @@ deploy:
   'on':
     branch: master
   provider: script
-  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
+  script: docker run --env MAILSPRING_VERSION="$(grep -E -o '([0-9]+.[0-9]+.[0-9]+)' <<< "$(find app/dist -type f -name mailspring-*.deb)")" -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
   skip_cleanup: true
