--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,9 @@ cache:
   - /tmp/mailsync-build-deps
 
 after_success:
+# Grab the version number from the .deb product and update the snapcraft.yml file
+- sed "s/MAILSPRING_VERSION/$(grep -E -o '([0-9]+.[0-9]+.[0-9]+)' <<< "$(find app/dist -type f -name mailspring-*.deb)")/g" snap/snapcraft.template.yaml > snap/snapcraft.yml
+# Decrypt the snapcraft login information
 - openssl aes-256-cbc -K $encrypted_f8421d18d2b7_key -iv $encrypted_f8421d18d2b7_iv
   -in .snapcraft/travis_snapcraft.cfg -out .snapcraft/snapcraft.cfg -d
 
@@ -103,5 +106,5 @@ deploy:
   'on':
     branch: master
   provider: script
-  script: docker run --env MAILSPRING_VERSION="$(grep -E -o '([0-9]+.[0-9]+.[0-9]+)' <<< "$(find app/dist -type f -name mailspring-*.deb)")" -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
+  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
   skip_cleanup: true
