--- a/snap/snapcraft.template.yaml
+++ b/snap/snapcraft.template.yaml
@@ -39,6 +39,8 @@ apps:
     # Correct the TMPDIR path for Chromium Framework/Electron to
     # ensure libappindicator has readable resources.
     environment:
+      HOME: $SNAP_USER_COMMON
+      XDG_CONFIG_HOME: "$SNAP_USER_COMMON/.config"
       TMPDIR: $XDG_RUNTIME_DIR
     plugs:
      - avahi-observe
