Install libsasl2 GSSAPI on Travis so builds support it

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ addons:
     - libicu-dev
     - libxext-dev
     - libsasl2-dev
+    - libsasl2-modules
+    - libsasl2-modules-gssapi-mit
     - libssl-dev
     - libtidy-dev
     - libxtst-dev
