--- a/snap/snapcraft.template.yaml
+++ b/snap/snapcraft.template.yaml
@@ -50,7 +50,7 @@ apps:
      - home
      - mount-observe
      - network
-     - network-control
+     - network-observe
      - password-manager-service
      - pulseaudio
      - removable-media
