Turn the Snap linux build back on for further polish

--- a/.travis.yml
+++ b/.travis.yml
@@ -95,20 +95,20 @@ cache:
   - app/node_modules
   - /tmp/mailsync-build-deps
 
-# after_success:
-# # Grab the version number from the .deb product and update the snapcraft.yml file
-# - sed "s/MAILSPRING_VERSION/$(grep -E -o '([0-9]+.[0-9]+.[0-9]+)' <<< "$(find app/dist -type f -name mailspring-*.deb)")/g" snap/snapcraft.template.yaml > snap/snapcraft.yaml
-# # Decrypt the snapcraft login information
-# - openssl aes-256-cbc -K $encrypted_f8421d18d2b7_key -iv $encrypted_f8421d18d2b7_iv
-#   -in .snapcraft/travis_snapcraft.cfg -out .snapcraft/snapcraft.cfg -d
+after_success:
+# Grab the version number from the .deb product and update the snapcraft.yml file
+- sed "s/MAILSPRING_VERSION/$(grep -E -o '([0-9]+.[0-9]+.[0-9]+)' <<< "$(find app/dist -type f -name mailspring-*.deb)")/g" snap/snapcraft.template.yaml > snap/snapcraft.yaml
+# Decrypt the snapcraft login information
+- openssl aes-256-cbc -K $encrypted_f8421d18d2b7_key -iv $encrypted_f8421d18d2b7_iv
+  -in .snapcraft/travis_snapcraft.cfg -out .snapcraft/snapcraft.cfg -d
 
-# services:
-# - docker
+services:
+- docker
 
-# deploy:
-#   'on':
-#     branch: master
-#     condition: $TRAVIS_OS_NAME = linux
-#   provider: script
-#   script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
-#   skip_cleanup: true
+deploy:
+  'on':
+    branch: master
+    condition: $TRAVIS_OS_NAME = linux
+  provider: script
+  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft push *.snap --release edge"
+  skip_cleanup: true
