Snap: add network-bind interface in case it’s preventing unix socket comm

--- a/snap/snapcraft.template.yaml
+++ b/snap/snapcraft.template.yaml
@@ -49,6 +49,7 @@ apps:
      - home
      - mount-observe
      - network
+     - network-bind
      - network-observe
      - password-manager-service
      - pulseaudio
