--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "license-extractor": "^1.0.4",
     "load-grunt-parent-tasks": "^0.1.2",
     "meta-marked": "^0.4.2",
+    "node-gyp": "^7.1.0",
     "mkdirp": "^0.5.1",
     "prettier": "^1.10.0",
     "request": "^2.88.0",
