--- a/package.json
+++ b/package.json
@@ -51,18 +51,17 @@
     "@types/underscore": "^1.8.9",
     "@types/underscore.string": "^0.0.33",
     "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "chalk": "1.x.x",
     "devtron": "^1.4.0",
     "electron": "4.2.12",
     "electron-installer-dmg": "0.2.x",
     "electron-packager": "14.2.x",
     "electron-winstaller": "2.x.x",
-    "eslint": "^5.15.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-react": "7.22.0",
     "fs-extra": "2.x.x",
     "fs-plus": "2.x.x",
     "gitbook-cli": "^2.3.2",
@@ -90,7 +89,7 @@
     "rimraf": "^2.6.1",
     "targz": "^1.0.1",
     "temp": "0.8.x",
-    "typescript": "^3.3.3333",
+    "typescript": "3.9.7",
     "underscore": "1.8.x"
   },
   "scripts": {
