--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "eslint": "7.13.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "fs-extra": "2.x.x",
     "fs-plus": "2.x.x",
     "gitbook-cli": "^2.3.2",
