Ignore snapcraft upload failures to workaround bug in their CLI, see link
https://forum.snapcraft.io/t/package-upload-is-no-more-enough-for-uploading/19212/6

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,5 +98,5 @@ deploy:
     branch: master
     condition: $TRAVIS_OS_NAME = linux
   provider: script
-  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft login --with .snapcraft/credentials && snapcraft push *.snap --release edge"
+  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft login --with .snapcraft/credentials && (snapcraft push *.snap --release edge || true)"
   skip_cleanup: true
