Use npm@7 when running our own postinstall script

--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "load-grunt-parent-tasks": "^0.1.2",
     "meta-marked": "^0.4.2",
     "mkdirp": "^0.5.1",
-    "node-gyp": "^7.1.0",
+    "node-gyp": "^7.1.2",
+    "npm": ">=7",
     "prettier": "^1.10.0",
     "request": "^2.88.0",
     "rimraf": "^2.6.1",
