--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "7.22.0",
+    "fastq": "^1.11.0",
     "fs-extra": "2.x.x",
     "fs-plus": "2.x.x",
     "gitbook-cli": "^2.3.2",
