--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=11",
     "npm": ">=7"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/better-sqlite3": "^5.4.0",
     "@types/classnames": "^2.2.7",
     "@types/debug": "^4.1.2",
@@ -64,7 +64,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "7.22.0",
-    "fastq": "^1.11.0",
     "fs-extra": "2.x.x",
     "fs-plus": "2.x.x",
     "gitbook-cli": "^2.3.2",
