When running from the Linux snap, use no-sandbox

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/node:12.9.1-stretch
     steps:
       - checkout
+      - sudo apt-get update && sudo apt-get install libsecret-1-dev
       - restore_cache:
           name: Restore Package Cache
           keys:
