--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,13 @@ addons:
       - $(find . -type f -name mailspring-*.deb | tr "\n" ":")
       - $(find . -type f -name mailspring-*.rpm | tr "\n" ":")
       - $(find . -type f -name mailspring-*.snap | tr "\n" ":")
+  snaps:
+    - name: snapcraft
+      channel: candidate
+      confinement: classic
+    - name: transfer
+    - name: lxd
+      channel: stable
   apt:
     sources:
       - ubuntu-toolchain-r-test
@@ -101,19 +108,25 @@ cache:
     - node_modules
     - app/node_modules
     - /tmp/mailsync-build-deps-v2
-    - /var/lib/docker/aufs
 
 after_success:
+  # Prepare the snapcraft environment
+  - sudo /snap/bin/lxd.migrate -yes
+  - sudo /snap/bin/lxd waitready
+  - sudo /snap/bin/lxd init --auto
+  - mkdir -p "$TRAVIS_BUILD_DIR/snaps-cache"
+  - sudo SNAPCRAFT_ENABLE_DEVELOPER_DEBUG=y /snap/bin/snapcraft --use-lxd
+  - timeout 180 sudo /snap/bin/transfer *.snap
   # Decrypt the snapcraft login information
   - openssl aes-256-cbc -K $encrypted_d506bd5213c4_key -iv $encrypted_d506bd5213c4_iv -in .snapcraft/credentials.enc -out .snapcraft/credentials -d
 
-services:
-  - docker
+after_failure:
+  - test "$TRAVIS_OS_NAME" = "linux" && sudo journalctl -u snapd || true
 
 deploy:
   'on':
     branch: master
     condition: $TRAVIS_OS_NAME = linux
   provider: script
-  script: docker run -v $(pwd):$(pwd) -t snapcore/snapcraft sh -c "apt update -qq && cd $(pwd) && snapcraft && snapcraft login --with .snapcraft/credentials && (snapcraft push *.snap --release edge || true)"
+  script: sudo snapcraft login --with .snapcraft/credentials && sudo snapcraft push *.snap --release edge || true
   skip_cleanup: true
