Upgrade electron-packager and electron-installer-dmg

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "chalk": "1.x.x",
     "devtron": "^1.4.0",
     "electron": "8.5.5",
-    "electron-installer-dmg": "0.2.x",
-    "electron-packager": "14.2.x",
+    "electron-installer-dmg": "^3.0.0",
+    "electron-packager": "15.2.x",
     "electron-winstaller": "2.x.x",
     "eslint": "7.13.0",
     "eslint-config-prettier": "7.2.0",
